fix: change name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jns/test",
+    "name": "jns0522/test",
     "description": "pack jns test",
     "type": "library",
     "require": {
